#             |______\___|_| |_|\___/ \_____\___/|_|  \___|             #
#                                                                       #
#                                      Changelog                        #
#                                                                       #
#########################################################################

[45] --> Correct despawn of Lord Victor Nefarius in Blackwing Lair. (Thx Torrad)
[44] --> Correct use of bubble by Argent Confessor Paletress / Trial of the Champion. (Thx Torrad)
[43] --> DB/Exploit: Fix: Exp-Exploit with: NPC Azjol-Nerub / NPC Western Plaguelands.
[42] --> DB/Exploit: Fix: Duplicate gold with buy/sell this items.
[41] --> DB/Quest: Fix: To Catch a Thistlehead (Thx Kirkhammett & Pitcrawler)
[40] --> DB/Misc: Fix: Prevent chat/spell flood, Prevent summon spells from overwriting.
[39] --> Implement Arena "port-back" system, if player switches under the ground.
[38] --> DB/Spell: Fix: "Raise Death" of the Death knight Class (Thx Torrad).
[37] --> DB/Crash: Fix: Zul'Aman exploit with Amani'shi Warbringer (23580)
[36] --> DB/Waypoints: Fix: Heartrazor, Mmmrrrggglll (Thx Malcrom, Hobbilis)
[35] --> Delete the Headless Horseman. He should be only there at Hallow's End.
[34] --> DB/Instance: Update: Delete all non attackable npc's in Drak'Tharon Keep
[33] --> Update Halls of Reflection (Thx TrinityCore Team).
[32] --> DB/NPC: Fix: Elite NPCs in Northend (Thx Torrad).
[31] --> Anticheat Update. Correct notify message system. (Thx Torrad).
[30] --> DB/Quest: Fix: Not-So-Honorable Combat (Thx Kirkhammett)
[29] --> DB/Quest: Hack: Into the Pit (Thx Vitasic)
[28] --> DB/Quest: Fix: Frostmourne Cavern (Thx Pitcrawler).
[27] --> Core/Handler : Fix Sharing quest (Thx BitCoding)
[26] --> Update anticheat communication system. (Thx Torrad)
[25] --> DB/Quest: Fix: Foolish Endeavors (Thx dr-j).
[24] --> DB/SAI: convert EAI of some Redridge Creatures (Thx Kirkhammett).