@@ -251,6 +251,7 @@ enum CharacterDatabaseStatements
     CHAR_UPD_ARENA_TEAM_MEMBER,
     CHAR_REP_CHARACTER_ARENA_STATS,
     CHAR_SEL_PLAYER_ARENA_TEAMS,
+    CHAR_UPD_ARENA_TEAM_NAME,
 
     CHAR_SEL_PETITION,
     CHAR_SEL_PETITION_SIGNATURE,
